--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.titulo{
+  color:rgb(1, 0, 0);
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.color-titulo{
+  font-size: 50px;
+}
+
+.tarjeta{
+  color: rgb(5, 3, 3);
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.imagen{
+  width: 400px;
+  border-radius:4px;
+}
+
+.footer{
+  color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
 }
